--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ packages = find:
 install_requires =
     ruamel.yaml>=0.15
     toml
+    clang-format
 python_requires = >=3.7
 
 [options.entry_points]
