--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     ruamel.yaml>=0.15
     toml
     clang-format
+    cmakelang
 python_requires = >=3.7
 
 [options.entry_points]
