--- a/setup.cfg
+++ b/setup.cfg
@@ -43,8 +43,7 @@ console_scripts =
     generic-detect-private-key = pre_commit_hooks.generic_detect_private_key:main
     generic-end-of-file-fixer = pre_commit_hooks.generic_end_of_file_fixer:main
     generic-trailing-whitespace-fixer = pre_commit_hooks.generic_trailing_whitespace_fixer:main
-    generic-crlf-forbid = pre_commit_hooks.generic_crlf_forbid:main
-    generic-crlf-remove = pre_commit_hooks.generic_crlf_remove:main
+    generic-mixed-line-ending = pre_commit_hooks.generic_mixed_line_ending:main
     generic-tabs-forbid = pre_commit_hooks.generic_tabs_forbid:main
     generic-tabs-remove = pre_commit_hooks.generic_tabs_remove:main
     generic-nbsp-forbid = pre_commit_hooks.generic_nbsp_forbid:main
