--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ console_scripts =
     git-commit-msg = pre_commit_hooks.git_commit_msg:main
 
     generic-check-byte-order-marker = pre_commit_hooks.generic_check_byte_order_marker:main
+    generic-fix-byte-order-marker = pre_commit_hooks.generic_fix_byte_order_marker:main
     generic-check-case-conflict = pre_commit_hooks.generic_check_case_conflict:main
     generic-check-executables-have-shebangs = pre_commit_hooks.generic_check_executables_have_shebangs:main
     generic-check-symlinks = pre_commit_hooks.generic_check_symlinks:main
