--- a/setup.cfg
+++ b/setup.cfg
@@ -21,11 +21,14 @@ classifiers =
 
 [options]
 packages = find:
+include_package_data = true
 install_requires =
     ruamel.yaml>=0.15
     toml
     clang-format
     cmakelang
+    pylint==2.15.3
+    relint
 python_requires = >=3.7
 
 [options.entry_points]
@@ -72,6 +75,8 @@ console_scripts =
     xml-check-syntax = pre_commit_hooks.xml_check_syntax:main
 
     yaml-check-syntax = pre_commit_hooks.yaml_check_syntax:main
+
+    doxygen-check-syntax = pre_commit_hooks.doxygen_check_syntax:main
 
 [bdist_wheel]
 universal = True
