[+] Add shellcheck as dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ install_requires =
     cmakelang
     pylint==2.15.3
     relint
+    setup-cfg-fmt
+    shellcheck-py
 python_requires = >=3.7
 
 [options.entry_points]
