[+] Add Ansible linter

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -706,9 +706,26 @@
 ## DOXYGEN ##
 #############
 #############
+
 - id: doxygen-check-syntax
   name: doxygen-check-syntax
   description: '[Doxygen] Documentation linter'
   entry: doxygen-check-syntax
   language: python
   types: [file]
+
+#############
+#############
+## ANSIBLE ##
+#############
+#############
+
+- id: ansible-lint
+  name: Ansible-lint
+  description: '[Ansible] Ansible linter'
+  entry: python3 -m ansiblelint -v --force-color
+  language: python
+  pass_filenames: false
+  always_run: true
+  additional_dependencies:
+    - ansible-core>=2.13.3
