--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     relint
     setup-cfg-fmt
     shellcheck-py
+    ansible-lint
 python_requires = >=3.7
 
 [options.entry_points]
