--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
     clang-format
     cmakelang
     pylint==2.15.3
+    pylint-venv
     relint
     setup-cfg-fmt
     shellcheck-py
