--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     ansible-lint
     clang-format
     cmakelang
+    isort
     pydocstyle
     ruamel.yaml
     setup-cfg-fmt
@@ -62,6 +63,7 @@ console_scripts =
     python-fix-encoding-pragma = pre_commit_hooks.python_fix_encoding_pragma:main
     python-name-tests-test = pre_commit_hooks.python_name_tests_test:main
     python-pylint-config = pre_commit_hooks.python_pylint_config:main
+    python-isort-config = pre_commit_hooks.python_pylint_config:main
     python-requirements-txt-fixer = pre_commit_hooks.python_requirements_txt_fixer:main    
     toml-check-syntax = pre_commit_hooks.toml_check_syntax:main
     toml-pretty-format = pre_commit_hooks.toml_pretty_format:main
