--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -48,7 +48,7 @@
     Origin: https://clang.llvm.org/
   entry: clang-format
   language: python
-  'types_or': [c++, c, objective-c]
+  types_or: [c++, c, objective-c, proto]
   args: ["-style=file", "-i"]
   require_serial: false
 
